chỉnh csdl và các folder model, controller, service, .... ( Trân + A. Khoa + Khải + Thái làm chung)